--- a/e-AgendaMedica.WebApi/appsettings.json
+++ b/e-AgendaMedica.WebApi/appsettings.json
@@ -1,9 +1,8 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=eAgendaMedica;Integrated Security=True"
   },
-  "AllowedHosts": "*"
+  "DiretorioLogs": {
+    "Caminho": "C:\\temp\\pdfs"
+  }
 }
