--- a/e-AgendaMedica.Dominio/e-AgendaMedica.Dominio.csproj
+++ b/e-AgendaMedica.Dominio/e-AgendaMedica.Dominio.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,9 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-  	<Folder Include="Compartilhado\" />
   	<Folder Include="ModuloAtividade\" />
-  	<Folder Include="ModuloMedico\" />
   </ItemGroup>
 	
   <ItemGroup>
