--- a/e-AgendaMedica.Infra.Orm/e-AgendaMedica.Infra.Orm.csproj
+++ b/e-AgendaMedica.Infra.Orm/e-AgendaMedica.Infra.Orm.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -14,11 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
-  	<Folder Include="ModuloAtividade\" />
+    <ProjectReference Include="..\e-AgendaMedica.Dominio\e-AgendaMedica.Dominio.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\e-AgendaMedica.Dominio\e-AgendaMedica.Dominio.csproj" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
