--- a/e-AgendaMedica.Dominio/e-AgendaMedica.Dominio.csproj
+++ b/e-AgendaMedica.Dominio/e-AgendaMedica.Dominio.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 	
   <ItemGroup>
+    <PackageReference Include="FluentResults" Version="3.14.0" />
     <PackageReference Include="FluentValidation" Version="11.8.0" />
     <PackageReference Include="SequentialGuidGenerator" Version="1.1.0" />
   </ItemGroup>
