implementa massa de dados e gerador de bancos automatico

--- a/e-AgendaMedica.WebApi/e-AgendaMedica.WebApi.csproj
+++ b/e-AgendaMedica.WebApi/e-AgendaMedica.WebApi.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\e-AgendaMedica.Aplicacao\e-AgendaMedica.Aplicacao.csproj" />
     <ProjectReference Include="..\e-AgendaMedica.Dominio\e-AgendaMedica.Dominio.csproj" />
+    <ProjectReference Include="..\e-AgendaMedica.Infra.MassaDados\e-AgendaMedica.Infra.MassaDados.csproj" />
     <ProjectReference Include="..\e-AgendaMedica.Infra.Orm\e-AgendaMedica.Infra.Orm.csproj" />
   </ItemGroup>
 
