--- a/e-AgendaMedica.Aplicacao/e-AgendaMedica.Aplicacao.csproj
+++ b/e-AgendaMedica.Aplicacao/e-AgendaMedica.Aplicacao.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="FluentResults" Version="3.14.0" />
     <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
