--- a/e-AgendaMedica.Aplicacao/e-AgendaMedica.Aplicacao.csproj
+++ b/e-AgendaMedica.Aplicacao/e-AgendaMedica.Aplicacao.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="FluentResults" Version="3.14.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
 	
