--- a/e-AgendaMedica.Dominio/e-AgendaMedica.Dominio.csproj
+++ b/e-AgendaMedica.Dominio/e-AgendaMedica.Dominio.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="FluentResults" Version="3.14.0" />
     <PackageReference Include="FluentValidation" Version="11.8.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.22" />
     <PackageReference Include="SequentialGuidGenerator" Version="1.1.0" />
   </ItemGroup>
 
