--- a/e-AgendaMedica.Infra.Orm/e-AgendaMedica.Infra.Orm.csproj
+++ b/e-AgendaMedica.Infra.Orm/e-AgendaMedica.Infra.Orm.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.22" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
@@ -15,6 +17,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\e-AgendaMedica.Dominio\e-AgendaMedica.Dominio.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
