--- a/e-AgendaMedica.WebApi/e-AgendaMedica.WebApi.csproj
+++ b/e-AgendaMedica.WebApi/e-AgendaMedica.WebApi.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.22" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.22">
       <PrivateAssets>all</PrivateAssets>
@@ -24,6 +26,10 @@
     <ProjectReference Include="..\e-AgendaMedica.Dominio\e-AgendaMedica.Dominio.csproj" />
     <ProjectReference Include="..\e-AgendaMedica.Infra.MassaDados\e-AgendaMedica.Infra.MassaDados.csproj" />
     <ProjectReference Include="..\e-AgendaMedica.Infra.Orm\e-AgendaMedica.Infra.Orm.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Autenticacao\" />
   </ItemGroup>
 
 </Project>
